tests/spec/parse/snapshots/tuple_struct_function_type_field_after_other_field.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Handler(int, fn(int) -> int)
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Handler",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        generics: [],
        fields: Tuple(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "_0",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 3,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 16,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
                StructFieldDefinition {
                    doc: None,
                    name: "_1",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 21,
                        byte_length: 14,
                    },
                    annotation: Function {
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 3,
                                },
                            },
                        ],
                        return_type: Constructor {
                            name: "int",
                            params: [],
                            span: Span {
                                file_id: 0,
                                byte_offset: 32,
                                byte_length: 3,
                            },
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 21,
                            byte_length: 14,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 35,
        },
    },
]
