tests/spec/parse/snapshots/tuple_struct_single_field.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct UserId(int)
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "UserId",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 6,
        },
        generics: [],
        fields: Tuple(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "_0",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 15,
                        byte_length: 3,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 18,
        },
    },
]
