tests/spec/parse/snapshots/tuple_struct_trailing_comma.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Point(int, int,)
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Point",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Tuple(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "_0",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 14,
                        byte_length: 3,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 14,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "_1",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 19,
                        byte_length: 3,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 23,
        },
    },
]
