tests/spec/parse/snapshots/tuple_struct_with_generics.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Wrapper<T>(T)
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Wrapper",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 1,
                },
            },
        ],
        fields: Tuple(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "_0",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 19,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 1,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 20,
        },
    },
]
