tests/spec/parse/snapshots/tuple_struct_zero_field.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Marker()
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Marker",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 6,
        },
        generics: [],
        fields: Tuple(
            [],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 15,
        },
    },
]
