tests/spec/parse/snapshots/type_alias_generic.snap
---
source: tests/spec/parse/mod.rs
description: "input: \ntype StringMap<V> = Map<string, V>;\n"
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "StringMap",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 9,
        },
        generics: [
            Generic {
                name: "V",
                bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 1,
                },
            },
        ],
        annotation: Constructor {
            name: "Map",
            params: [
                Constructor {
                    name: "string",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 25,
                        byte_length: 6,
                    },
                },
                Constructor {
                    name: "V",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 33,
                        byte_length: 1,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 21,
                byte_length: 14,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 34,
        },
    },
]
